Legger til støtte for forlengelse (#2606)
* Legger til støtte for forlengelse

* Lager egen kontrakt og endepunkt for fordeling

* Fiks etter merge

* Fjerner kopiering av input

* Splitter ut kopiering i egen rest-tjeneste

* Fjerner lagring av om kobling er forlengelse, fikser kompileringsfeil

* Oppretter entiteter og tabeller for lagring av forlengelseperioder

* Nye requests og samler start, fortsett og fordel i eit endepunkt

* Fiksing etter rebase

* Fikse script

* Fikse enitetnavn

* Håndterer at input alltid sendes med

* Bugfiksing

* Implementerer tilbakerulling for forlengelse

* Bugfiks

* Perioder til vurdering tjeneste